# Korean_QA_RAG_2025

./: .gitignore  README.md  main.py  pyproject.toml  result__old.json  run_test.sh  run_test_local.sh  run_test_local_32.sh  run_test_local_32_11435.sh  run_test_local_sample.sh  run_test_sample copy.sh
00_rag_make_dataset/: main.ipynb
01_rag_make_vectordb/: README.md  docker-compose.yml  makeDB.py
RAG/00_rag_make_dataset/: chunks.jsonl  chunks_docx.jsonl  main.ipynb  rechunked_data.jsonl
RAG/02_make_vector_data/: make_vector.py
RAG/03_rag_make_vectordb/: makeDB_http.py  makeDB_local.py  rag_evaluation_log_20250627_025335.json  rag_test.py  rag_test_local_dev.py  rag_test_local_test.py  result-250627-32b.json  result-250627-8b.json
RAG/03_rag_make_vectordb/qdrant_local_storage/: meta.json
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988183/collection/korean_qa_hybrid/: storage.sqlite
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988246/collection/korean_qa_hybrid/: storage.sqlite
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988315/collection/korean_qa_hybrid/: storage.sqlite
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988430/: meta.json
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988430/collection/korean_qa_hybrid/: storage.sqlite
RAG/03_rag_make_vectordb/qdrant_qa_db_1750988963/collection/korean_qa_hybrid/: storage.sqlite
RAG/03_rag_make_vectordb/qdrant_qa_db_1750990014/collection/korean_qa_hybrid/: storage.sqlite
RAG/resource/: korean_language_rag_V1.0_train.json
RAG/resource/RAG/: sample_rag.json
RAG/run/: test.py  test_local.py  test_local_32.py  test_local_32_11435.py
model/: .gitignore  README.md  README_QWEN3_8B.md  evaluate_models.py  inference.py  pyproject.toml  run_inference.sh  run_inference_improved.sh  run_inference_test_current.sh  run_server.sh  run_train_improved.sh  run_validate_qwen3_8b.sh  server.py  setup_permissions.sh  train.py  validate_qwen3_8b.py
model/resource/RAG/: korean_language_rag_V1.0_dev_without_answer.json
model/rules/: main-rule.mdc
model/run/: test.py
model/src/: data.py
resource/RAG/: sample_rag.json
