[project]
name = "korean-qa-rag-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "pypdf>=5.6.0",
    "qdrant-client>=1.14.3",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
